fixed visuals bugs from button input and horizontal scroll

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,3 +4,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    box-sizing: border-box;
+    max-width: 100%;
+    padding: 0;
+    margin: 0;
+}
